--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -180,13 +180,13 @@ header ul2:before {
   box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0, inset rgba(255, 255, 255, 0.7) 0 -1px 0;
 }
 header ul li {
-  width: 79px;
+  width: auto;
   float: left;
   border-right: 1px solid #3A7CBE;
   height: 38px;
 }
 header ul2 li {
-  width: 79px;
+  width: auto;
   float: left;
   border-right: 1px solid #3A7CBE;
   height: 38px;
