--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -118,7 +118,7 @@ header ul {
   -webkit-box-shadow: inset rgba(255, 255, 255, 0.45) 0 1px 0, inset rgba(0, 0, 0, 0.2) 0 -1px 0;
   -moz-box-shadow: inset rgba(255, 255, 255, 0.45) 0 1px 0, inset rgba(0, 0, 0, 0.2) 0 -1px 0;
   box-shadow: inset rgba(255, 255, 255, 0.45) 0 1px 0, inset rgba(0, 0, 0, 0.2) 0 -1px 0;
-  width: auto;
+  width: 200px;
 }
 header ul2 {
   margin: 0;
@@ -141,7 +141,7 @@ header ul2 {
   -webkit-box-shadow: inset rgba(255, 255, 255, 0.45) 0 1px 0, inset rgba(0, 0, 0, 0.2) 0 -1px 0;
   -moz-box-shadow: inset rgba(255, 255, 255, 0.45) 0 1px 0, inset rgba(0, 0, 0, 0.2) 0 -1px 0;
   box-shadow: inset rgba(255, 255, 255, 0.45) 0 1px 0, inset rgba(0, 0, 0, 0.2) 0 -1px 0;
-  width: auto;
+  width: 200px;
 }
 header ul:before {
   content: '';
@@ -180,13 +180,13 @@ header ul2:before {
   box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0, inset rgba(255, 255, 255, 0.7) 0 -1px 0;
 }
 header ul li {
-  width: auto;
+  width: 100px;
   float: left;
   border-right: 1px solid #3A7CBE;
   height: 50px;
 }
 header ul2 li {
-  width: auto;
+  width: 100px;
   float: left;
   border-right: 1px solid #3A7CBE;
   height: 60px;
