--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -118,7 +118,7 @@ header ul {
   -webkit-box-shadow: inset rgba(255, 255, 255, 0.45) 0 1px 0, inset rgba(0, 0, 0, 0.2) 0 -1px 0;
   -moz-box-shadow: inset rgba(255, 255, 255, 0.45) 0 1px 0, inset rgba(0, 0, 0, 0.2) 0 -1px 0;
   box-shadow: inset rgba(255, 255, 255, 0.45) 0 1px 0, inset rgba(0, 0, 0, 0.2) 0 -1px 0;
-  width: 200px;
+  width: auto;
 }
 header ul2 {
   margin: 0;
@@ -141,7 +141,7 @@ header ul2 {
   -webkit-box-shadow: inset rgba(255, 255, 255, 0.45) 0 1px 0, inset rgba(0, 0, 0, 0.2) 0 -1px 0;
   -moz-box-shadow: inset rgba(255, 255, 255, 0.45) 0 1px 0, inset rgba(0, 0, 0, 0.2) 0 -1px 0;
   box-shadow: inset rgba(255, 255, 255, 0.45) 0 1px 0, inset rgba(0, 0, 0, 0.2) 0 -1px 0;
-  width: 200px;
+  width: auto;
 }
 header ul:before {
   content: '';
@@ -180,13 +180,13 @@ header ul2:before {
   box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0, inset rgba(255, 255, 255, 0.7) 0 -1px 0;
 }
 header ul li {
-  width: 100px;
+  width: auto;
   float: left;
   border-right: 1px solid #3A7CBE;
   height: 50px;
 }
 header ul2 li {
-  width: 100px;
+  width: auto;
   float: left;
   border-right: 1px solid #3A7CBE;
   height: 60px;
@@ -198,12 +198,12 @@ header ul2 li.single {
   border: none;
 }
 header ul li + li {
-  width: 100px;
+  width: auto;
   border-left: 1px solid #8BBEF3;
 }
 header ul li + li + li {
   border-right: none;
-  width: 100px;
+  width: auto;
 }
 header ul a {
   line-height: 1;
@@ -225,12 +225,12 @@ header ul a strong {
 }
 
 header ul2 li + li {
-  width: 100px;
+  width: auto;
   border-left: 1px solid #8BBEF3;
 }
 header ul2 li + li + li {
   border-right: none;
-  width: 100px;
+  width: auto;
 }
 header ul2 a {
   line-height: 1;
